tests/NormalTests/paczka2/big_fuzzy/21473918.err
Error in line 1: KRQIIbmDf9 A671 14,9
Error in line 14: 9l6w67WozEx S538 13,66
Error in line 13: 4Di S538 22,6
Error in line 18: KRQIIbmDf9 A671 1,0
Error in line 11: 9l6w67WozEx S538 8,0
Error in line 25: 9l6w67WozEx A876 37,8
Error in line 26: M1ljnVn1V A671 89,6
Error in line 42: M1ljnVn1V A876 19,9
Error in line 44: M1ljnVn1V A671 74,2
Error in line 52: M1ljnVn1V A670 46,9
Error in line 63: tcC S538 52,2
Error in line 69: 4Di A670 2,1
Error in line 79: tXrtKVt S538 80,3
Error in line 83: KRQIIbmDf9 S538 30,0
Error in line 82: M1ljnVn1V A876 85,7
Error in line 80: tXrtKVt A876 96,0
Error in line 81: S538 A671 21,6
Error in line 86: M1ljnVn1V S538 72,9
Error in line 89: S538 S538 0,6
Error in line 99: S538 A670 -2,5
Error in line 95: KRQIIbmDf9 A671 40,7
Error in line 104: tXrtKVt A670 0,6
Error in line 102: 9l6w67WozEx A671 93,7
Error in line 106: tXrtKVt S538 5,4
Error in line 132: 9l6w67WozEx A876 30,16
Error in line 119: 4Di A670 57,4
Error in line 142: KRQIIbmDf9 A876 89,2
Error in line 147: 9l6w67WozEx A876 66,7
Error in line 153: M1ljnVn1V A670 56,8
Error in line 169: tcC S538 74,5
Error in line 173: KRQIIbmDf9 S538 64,6
Error in line 175: KRQIIbmDf9 A671 47,8
Error in line 186: KRQIIbmDf9 A876 64,7
Error in line 187: KRQIIbmDf9 S538 95,6
Error in line 172: tcC A671 44,3
Error in line 183: 4Di A670 22,7
Error in line 195: 4Di S538 27,4
Error in line 205: KRQIIbmDf9 A670 314,9
Error in line 204: 4Di A876 18,3
Error in line 222: tcC A876 56,7
Error in line 244: 4Di A876 61,8
Error in line 242: tXrtKVt S538 82,5
